<resources>
    <string name="app_name">Test APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="location">Location:</string>
    <string name="bio">Bio:</string>
    <string name="company">Company:</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="enter_username">Enter username</string>
    <string name="record_not_found">Record Not found</string>
</resources>