<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    <variable
        name="vm"
        type="com.app.testapp.ui.usersearch.UserSearchViewModel" />

        <import type="android.R" />
        <import type="android.view.View"/>

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    tools:context=".ui.usersearch.UserSearchScreen">



    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:padding="8dp"
        android:layout_marginHorizontal="8dp"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:onEditorAction="@{(view,actionId,event) -> vm.onEditorAction(view,actionId,event)}"
        android:background="@drawable/edit_shape"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:text="@string/search"
        android:background="@drawable/edit_shape"
        android:backgroundTint="@color/purple_200"
        android:onClick="@{() -> vm.SearchUser()}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="@{vm.datafound == true ? View.VISIBLE : View.GONE }"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="14dp"
        app:cardBackgroundColor="@color/bg"
        android:layout_marginTop="-50dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.searchedUser.name }"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="58dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.searchedUser.login }"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />


            <TextView
                android:id="@+id/comp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@{ @string/company +' '+ vm.searchedUser.company }"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log" />


            <TextView
                android:id="@+id/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{ @string/bio +' '+ vm.searchedUser.bio }"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comp" />


            <TextView
                android:id="@+id/loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@{ @string/location +' '+ vm.searchedUser.location }"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bio" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@+id/loc">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="@{() -> vm.gotoNext(vm.followers)}"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/followers"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bio" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@{vm.searchedUser.followers}"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bio" />




                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="@{() -> vm.gotoNext(vm.following)}"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/following"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bio" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@{vm.searchedUser.following}"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bio" />


                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:load_image="@{vm.searchedUser.avatar_url}" />


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loadingProgress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="@{vm.loading == true ? View.VISIBLE : View.GONE }"
        android:focusableInTouchMode="true"
        android:indeterminateTint="@color/purple_700"
        android:padding="170dp"
        />

    <TextView
        android:id="@+id/notfound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_not_found"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textAlignment="center"
        android:alpha="@{vm.alpha}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>